--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://back-end-xsvg.onrender.com/
+REACT_APP_API_URL=https://back-end.nguyenduckhanh.click/
 PUBLIC_URL=https://nguyenduckhanh.click/
