--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://back-end.nguyenduckhanh.click/
+REACT_APP_API_URL=https://backend.nguyenduckhanh.click/
 PUBLIC_URL=https://nguyenduckhanh.click/
