--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_URL=https://backend.nguyenduckhanh.click/
+# REACT_APP_API_URL=https://backend.nguyenduckhanh.click/
+REACT_APP_API_URL=http://127.0.0.1:8081/
 PUBLIC_URL=https://nguyenduckhanh.click/
